# ops-evidence-synthesis

./: .dockerignore  .gcloudignore  .gitignore  .gitleaks.toml  CHANGELOG.md  HACKATHON_SUBMISSION.md  LICENSE  Makefile  README.md  SECURITY.md  architecture.txt  cloudbuild.yaml  pyproject.toml
data/: amazon_notify_flagship_logs.jsonl  sample_logs.jsonl
docs/: architecture.md  claude-opus-provider-evaluation.md  current-vs-architecture-gap.md  data-boundary.md  demo-video-script.md  evidence_bundle.md  gemma-provider-evaluation.md  grok-provider-evaluation.md  protopedia-entry-japanese.md  protopedia-entry-v3.md  public-documentation-inventory.md  real-api-5-provider-run.md  real-api-qwen-glm-run.md  review-modes-runbook.md  stream-v3-real-api-runs.md  submission-checklist.md  submission-links.md  x-post-draft.md
hackathon/: 01-storyboard.md  02-narration-ja.md  03-shot-list.md  04-recording-checklist.md  05-画面とナレーション対応表.md  README.md  claims-and-sources.md
sample_logs/: redaction_fixture.jsonl  sample.jsonl  secret_heavy.jsonl
schemas/: claim_result.schema.json  evidence_bundle.schema.json
scripts/: README.md  analyze_amazon_notify_local.py  check_demo_video_path.py  check_precomputed_review_url.py  cloud_run_smoke.py  configure_budget_fast_gcp_guard.py  configure_cloud_run_domain.py  configure_cloudflare_waf.py  demo_full_multi_ai.sh  demo_full_multi_ai_real.sh  demo_source_first_multi_ai.sh  deploy_public_demo.sh  evaluate_stream_v3_window_candidates.py  gcs_review_flow.py  generate_precomputed_review.py  generate_precomputed_review_from_multi_run.py  manual_ci.sh  run_stream_v3_bigquery_14d.py  run_stream_v3_bigquery_aggregate.py  serve_local_viewer.py  terraform_docker.sh
tests/: test_adk_investigator.py  test_adk_investigator_trace.py  test_ai_provider_selection.py  test_api_ingest_gate.py  test_api_local_first_upload.py  test_api_more_data.py  test_api_profile_discovery_upload.py  test_bigquery_queries.py  test_browser_ui.py  test_bundle.py  test_canonical_graph_persistence.py  test_chunked_review_job.py  test_claude_provider.py  test_cli_contract.py  test_clustering.py  test_event_semantics.py  test_evidence_reconciliation.py  test_evidence_request_planner.py  test_gcp_storage.py  test_gcs_review_flow.py  (+41 more)
(+120 files in other folders)
