[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-evidence-synthesis"
version = "0.1.0"
requires-python = ">=3.11"
description = "GCP-ready DevOps evidence synthesis pipeline with deterministic local execution"
dependencies = [
  "jsonschema>=4.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
gcp = [
  "google-cloud-bigquery>=3.25",
]
test = [
  "pytest>=8.2,<9",
  "httpx>=0.27",
]
browser = [
  "playwright>=1.45",
]

[project.scripts]
ops-evidence = "ops_evidence_synthesis.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ops_evidence_synthesis*"]

[tool.setuptools.package-data]
ops_evidence_synthesis = ["profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
