[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-evidence-synthesis"
version = "0.2.0"
requires-python = ">=3.11"
description = "GCP-ready DevOps evidence synthesis pipeline with deterministic local execution"
dependencies = [
  "jsonschema>=4.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
gcp = [
  "google-cloud-bigquery>=3.25",
  "google-cloud-storage>=2.18",
]
postgres = [
  "psycopg[binary]>=3.2",
]
agent = [
  "google-adk==2.3.0",
  "google-cloud-aiplatform[agent_engines,adk]==1.158.0",
]
test = [
  "pytest>=8.2,<9",
  "httpx>=0.27",
  "coverage[toml]>=7.6,<8",
]
browser = [
  "playwright>=1.45",
]

[project.scripts]
ops-evidence = "ops_evidence_synthesis.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ops_evidence_synthesis*"]

[tool.setuptools.package-data]
ops_evidence_synthesis = ["profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["ops_evidence_synthesis"]

[tool.coverage.report]
fail_under = 78
precision = 1
skip_covered = true
